# wordalyzer

./: CMakeLists.txt
src/: audio.cpp  audio.hpp  common.cpp  common.hpp  database.cpp  database.hpp  diff_diagram.cpp  diff_diagram.hpp  endpointing.cpp  endpointing.hpp  gui.cpp  gui.hpp  lpc.cpp  lpc.hpp  main.cpp  record.cpp  record.hpp  wav.cpp  wav.hpp  window.cpp  window.hpp
